@@ -28,7 +28,6 @@ set auto_index(::tcl::HistIndex) [list source [file join $dir history.tcl]]
 set auto_index(::tcl::HistEvent) [list source [file join $dir history.tcl]]
 set auto_index(::tcl::HistChange) [list source [file join $dir history.tcl]]
 set auto_index(tclLdAout) [list source [file join $dir ldAout.tcl]]
-set auto_index(pkg_compareExtension) [list source [file join $dir package.tcl]]
 set auto_index(pkg_mkIndex) [list source [file join $dir package.tcl]]
 set auto_index(tclPkgSetup) [list source [file join $dir package.tcl]]
 set auto_index(tclPkgUnknown) [list source [file join $dir package.tcl]]
