@@ -8,7 +8,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: pkgMkIndex.test,v 1.26 2004/06/23 15:36:57 dkf Exp $
+# RCS: @(#) $Id: pkgMkIndex.test,v 1.27 2004/07/28 18:00:11 dgp Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest 2
@@ -673,24 +673,24 @@ test pkgMkIndex-13.1 {proc names with embedded spaces} {
 
 removeFile [file join pkg spacename.tcl]
 
-# Test the pkg_compareExtension helper function
-test pkgMkIndex-14.1 {pkg_compareExtension} {unix} {
-    pkg_compareExtension foo.so .so
+# Test the tcl::Pkg::CompareExtension helper function
+test pkgMkIndex-14.1 {tcl::Pkg::CompareExtension} {unix} {
+    tcl::Pkg::CompareExtension foo.so .so
 } 1
-test pkgMkIndex-14.2 {pkg_compareExtension} {unix} {
-    pkg_compareExtension foo.so.bar .so
+test pkgMkIndex-14.2 {tcl::Pkg::CompareExtension} {unix} {
+    tcl::Pkg::CompareExtension foo.so.bar .so
 } 0
-test pkgMkIndex-14.3 {pkg_compareExtension} {unix} {
-    pkg_compareExtension foo.so.1 .so
+test pkgMkIndex-14.3 {tcl::Pkg::CompareExtension} {unix} {
+    tcl::Pkg::CompareExtension foo.so.1 .so
 } 1
-test pkgMkIndex-14.4 {pkg_compareExtension} {unix} {
-    pkg_compareExtension foo.so.1.2 .so
+test pkgMkIndex-14.4 {tcl::Pkg::CompareExtension} {unix} {
+    tcl::Pkg::CompareExtension foo.so.1.2 .so
 } 1
-test pkgMkIndex-14.5 {pkg_compareExtension} {unix} {
-    pkg_compareExtension foo .so
+test pkgMkIndex-14.5 {tcl::Pkg::CompareExtension} {unix} {
+    tcl::Pkg::CompareExtension foo .so
 } 0
-test pkgMkIndex-14.6 {pkg_compareExtension} {unix} {
-    pkg_compareExtension foo.so.1.2.bar .so
+test pkgMkIndex-14.6 {tcl::Pkg::CompareExtension} {unix} {
+    tcl::Pkg::CompareExtension foo.so.1.2.bar .so
 } 0
 
 # cleanup
